# Straw-Hats

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: poem.txt  sample_run.md
straw_hats/: __init__.py  agent.py  cli.py  llm.py  memory.py  prompts.py  schemas.py
straw_hats/tools/: __init__.py  _common.py  http_fetch.py  maps.py  memory_tools.py  reddit.py  vision.py  web_search.py  wikipedia.py
tests/: conftest.py  test_memory.py
