[project]
name = "straw-hats"
version = "0.1.0"
description = "San Francisco treasure hunting agent powered by Claude Opus 4.7 via TokenRouter."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "anomalyco" }]
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2.50",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "trafilatura>=1.12.0",
    "tavily-python>=0.5.0",
    "Wikipedia-API>=0.7.0",
    "tenacity>=8.5.0",
]

[project.scripts]
straw-hats = "straw_hats.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["straw_hats"]

[tool.uv]
package = true
